<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.homepass.melbike.activity.MapsActivity" />

    <LinearLayout
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="5dp"
        android:orientation="horizontal">

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView"
            android:ems="10"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_weight="4"
            android:textColor="@color/common_google_signin_btn_text_light"
            android:textSize="12dp"
            android:hint="Search Location Here" />

        <Button
            android:id="@+id/naviBtn"
            android:layout_width="38dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="0.5"
            android:text="GO"/>

    </LinearLayout>
</RelativeLayout>